<resources>
    <string name="app_name">Test2</string>
    <string name="welcome_string">Welcome to Kafka\'s Love Castle</string>
    <string name="usename_text">Usename</string>
    <string name="password_text">Password</string>
    <string name="login_text">Login</string>
    <string name="register_text">Create new account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sentence_list">Sentence list</string>
    <string name="word_list">Word list</string>
</resources>