<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="199dp"
        android:layout_height="185dp"
        android:layout_marginBottom="350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/kafka" />

    <TextView
        android:id="@+id/welcome_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/welcome_string"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/logo_image"
        app:layout_constraintStart_toStartOf="@+id/logo_image"
        app:layout_constraintTop_toBottomOf="@+id/logo_image" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usename_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/usename_text"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_string">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usename_edit_text"
            android:layout_width="match_parent"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usename_text">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/password_text"
        app:layout_constraintStart_toStartOf="@id/password_text"
        app:layout_constraintEnd_toEndOf="@id/password_text"
        android:layout_marginTop="32dp"
        android:text="@string/login_text"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        app:layout_constraintStart_toStartOf="@id/login_button"
        app:layout_constraintEnd_toEndOf="@id/password_text"
        android:layout_marginTop="8dp"
        android:text="@string/register_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>